# peat-flutter

./: .gitignore  .license_config.yaml  ADOPTERS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ONBOARDING.md  README.md  SECURITY.md  justfile  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml  license.yaml  qa-review.yml
android/: .gitignore  build.gradle
android/src/main/: AndroidManifest.xml
docs/: crdt-counter-over-ble.md
docs/adr/: README.md
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/defenseunicorns/peat/: PeatJni.kt
example/android/app/src/main/kotlin/com/defenseunicorns/peat_flutter_example/: BleBridge.kt  MainActivity.kt  WifiDirectBridge.kt  WifiDirectManager.kt
example/ios/: Podfile
example/ios/Frameworks/PeatAppleFFI.xcframework/: Info.plist
example/ios/Frameworks/PeatAppleFFI.xcframework/ios-arm64-simulator/peat_apple_ffiFFI.framework/: peat_apple_ffiFFI
example/ios/Frameworks/PeatAppleFFI.xcframework/ios-arm64/peat_apple_ffiFFI.framework/: Info.plist  peat_apple_ffiFFI
example/ios/Frameworks/PeatAppleFFI.xcframework/ios-arm64/peat_apple_ffiFFI.framework/Headers/: peat_apple_ffiFFI.h
example/ios/Frameworks/PeatAppleFFI.xcframework/ios-arm64/peat_apple_ffiFFI.framework/Modules/: module.modulemap
example/ios/Runner/: AppDelegate.swift  BleBridge.swift  Runner.entitlements  peat_apple_ffi.swift
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner/: BleBridge.swift
ios/: .gitignore  build-rust.sh
lib/: peat_flutter.dart
lib/src/: peat_node.dart
macos/: build-rust.sh
rust/: Cargo.toml
rust/src/: dart_ffi.rs  lib.rs
rust/tests/: dart_ffi_shim_smoke.rs
src/: CMakeLists.txt
test/: delete_event_test.dart  marker_info_test.dart  peat_flutter_node_isolate_test.dart
tool/: smoke_blob.dart  smoke_reconnect.dart
