# Thin cdylib wrapper that builds peat-flutter's native library from the
# PUBLISHED `peat-ffi` crate (crates.io) — no `peat` repo checkout required.
# It re-exports peat-ffi's UniFFI scaffolding; all API + the hand-maintained
# Dart bindings (lib/src/generated/peat_ffi.dart) correspond to peat-ffi's
# surface. Mirrors defenseunicorns/peat-swift's `rust/` wrapper.
#
# Standalone crate (own [workspace]) so it doesn't attach to the Flutter tree.
[package]
name = "peat-flutter-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
# MUST be `peat_ffi` so the artifact is libpeat_ffi.{a,dylib,so} and the UniFFI
# namespace the Dart bindings load (create_node, etc.) matches what peat-ffi's
# `setup_scaffolding!()` declares. Renaming this breaks the bindings.
name = "peat_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Pinned to the published peat-ffi. sync = document/CRDT API; bluetooth = BLE
# transport; lite-bridge is required to compile (peat-ffi feature-gating) and
# adds the peat-lite envelope transport used by the BLE relay path. peat-ffi's
# own target-cfg selects the per-platform peat-btle backend automatically.
peat-ffi = { version = "=0.2.9", default-features = false, features = ["sync", "bluetooth", "lite-bridge"] }

# LOCAL DEV ONLY — remove before merge. Points at the sibling peat checkout's
# feat/peat-ffi-blob-fetch-uniffi branch (peat#1017, itself blocked on
# peat-mesh#274) so this crate can build against blob_fetch_start before
# peat-ffi 0.2.10 is published. Per peat/SKILL.md's cross-repo gotcha. Also
# patches peat-mesh directly — peat-ffi's `peat-mesh = { workspace = true }`
# resolves against the peat workspace's own version floor, which this
# standalone build doesn't inherit peat/Cargo.toml's [patch.crates-io] for.
[patch.crates-io]
peat-ffi = { path = "../../peat/peat-ffi" }
peat-mesh = { path = "../../peat-mesh" }
